src/styles/_mixins.scss
@mixin floating-avatar {
  display: block;
  height: 0;

  .avatar {
    float: left;
    height: $avatar-size;
    margin-left: calc(0px - $avatar-size - $block-inner-padding * 2);
    margin-top: calc(0px - $avatar-size / 2);
    width: $avatar-size;
  }

  @media screen and (max-width: $screen-breakpoint-medium) {
    height: auto;

    .avatar {
      float: none;
      height: $icon-size;
      margin-left: 0;
      margin-top: 0;
      width: $icon-size;
    }
  }
}

@mixin block-link {
  color: $block-link-color;

  &:hover {
    color: $block-link-hover-color;
  }
}

@mixin post-action {
  align-items: center;
  display: flex;
  font-weight: bold;
  margin: 0 $block-outer-padding calc($block-outer-padding / 2);

  img {
    filter: $text-colorizer;
    height: $icon-size;
    margin-right: calc($icon-size / 2);
    min-width: $icon-size;
    object-fit: contain;
    vertical-align: middle;
    width: $icon-size;
  }

  a {
    margin-right: $whitespace;
  }
}

@mixin post-icon {
  .icon {
    align-items: center;
    color: $secondary-text-color;
    display: flex;
    gap: $whitespace;

    img {
      filter: $secondary-text-colorizer;
      height: $icon-size;
      min-width: $icon-size;
      object-fit: contain;
      vertical-align: middle;
      width: $icon-size;
    }
  }

  a.icon:hover,
  button.icon:hover,
  .icon.highlighted {
    color: $secondary-text-hover-color;

    img {
      filter: $secondary-text-hover-colorizer;
    }
  }

  button.icon[disabled] {
    img {
      filter: $secondary-text-colorizer;
    }
  }

  .icon-small img {
    $icon-size-small: $icon-size * 0.8;

    height: $icon-size-small;
    min-width: $icon-size-small;
    width: $icon-size-small;
  }
}

@mixin block-dropdown-menu {
  position: relative;

  menu.dropdown-menu {
    background-color: $block-background-color;
    border: 1px solid $separator-color;
    border-radius: $btn-border-radius;
    box-shadow: $shadow;
    display: flex;
    flex-direction: column;
    gap: calc($block-inner-padding / 2);
    padding: calc($block-inner-padding / 2);
    position: absolute;
    white-space: nowrap;
    z-index: 3;
  }
}

@mixin block-btn {
  .btn {
    background-color: $btn-background-color;
    border: 1px solid transparent;
    box-shadow: none;

    &:hover {
      background-color: transparent;
      border: 1px solid $btn-background-color;
    }
  }
}

@mixin content-form {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  gap: $block-outer-padding;

  .input-group {
    width: 100%;

    label {
      display: block;
      font-weight: bold;
      margin-bottom: $input-padding;
    }

    .sub-label {
      color: $secondary-text-color;
      font-size: 12px;
      font-weight: normal;
      margin-top: 3px;
    }

    input,
    textarea {
      border-radius: $btn-border-radius;
      width: 100%;
    }
  }

  .error-message {
    color: $error-color;
  }
}

@mixin ugc-emoji {
  :deep(.emoji) {
    height: 24px;
    vertical-align: text-bottom;
    width: 24px;
  }
}

